# Qt-VTK-viewer

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scenewidget.cpp  scenewidget.h
